--- a/package.json
+++ b/package.json
@@ -2,17 +2,10 @@
   "name": "www",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "laravel-mix": "^6.0.49",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
-  }
+  "devDependencies": {}
 }
