--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "laravel-mix": "^6.0.49"
+    "autoprefix": "^1.0.1",
+    "laravel-mix": "^6.0.49",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   },
   "dependencies": {
     "accepts": "^1.3.8",
@@ -330,7 +333,6 @@
     "picocolors": "^1.1.0",
     "picomatch": "^2.3.1",
     "pkg-dir": "^4.2.0",
-    "postcss": "^8.4.47",
     "postcss-calc": "^8.2.4",
     "postcss-colormin": "^5.3.1",
     "postcss-convert-values": "^5.1.3",
